# yast-samba-server

./: .cvsignore  .gitignore  .travis.yml  Dockerfile  MAINTAINER  README.md  RPMNAME  SUBDIRS  TODO  yast2-samba-server.spec.in
.github/workflows/: ci.yml
doc/: Makefile.am
package/: yast2-samba-server.changes  yast2-samba-server.spec
samba-server/: .cvsignore  SUBDIRS
samba-server/doc/: samba-server.tasks
samba-server/src/: Makefile.am  SambaAccounts.pm  SambaSecrets.pm  SambaServer.pm  SambaService.pm  SambaTrustDom.pm  add_machine.ycp  complex.ycp  dialogs-items.ycp  helps.ycp  samba-options-global.ycp  samba-options-local.ycp  samba-server.ycp
samba-server/src/YaPI/: Samba.pm
samba-server/users-plugin/: UsersPluginSamba.pm  UsersPluginSambaGroups.pm
src/: Makefile.am  Samba.pm  SambaAccounts.pm  SambaBackend.pm  SambaBackendLDAP.pm  SambaBackendSimple.pm  SambaPrinters.pm  SambaRole.pm  SambaSecrets.pm  SambaServer.pm  SambaServer.ycp  SambaServerPassdb.pm  SambaServerWidgets.ycp  SambaService.pm  SambaTrustDom.pm  TabWidget.ycp  add_machine.ycp  complex.ycp  dialogs-items.ycp  dialogs.ycp  helps.ycp  ldap-widget.ycp  routines.ycp  samba-options-global.ycp  samba-options-local.ycp  samba-server.desktop  samba-server.y2cc  samba-server.ycp  samba-server_auto.ycp  samba-synonym-map.ycp  wizards.ycp
src/YaPI/: Samba.pm
src/autoyast-rnc/: samba-server.rnc
src/clients/: samba-server.rb  samba-server.ycp  samba-server_auto.rb  samba-server_auto.ycp  users_plugin_samba.rb  users_plugin_samba_groups.rb  users_plugin_samba_groups.ycp
src/config/: Makefile.am  samba-server.rnc
src/data/: add_machine.rb
src/desktop/: org.opensuse.yast.SambaServer.desktop  samba-server.desktop
src/include/samba-server/: complex.rb  dialogs-items.rb  dialogs.rb  dialogs.ycp  helps.rb  ldap-widget.rb  samba-options-global.rb  samba-options-local.rb  wizards.rb
src/modules/: SambaAccounts.pm  SambaBackendLDAP.pm  SambaBackendSimple.pm  SambaPrinters.pm  SambaServer.pm  SambaService.pm
src/modules/YaPI/: Samba.pm
test/: dialog_complex_test.rb  test_helper.rb
testsuite/: Makefile.am
testsuite/Modules/: Makefile.am
testsuite/Modules/tests/: SambaAccounts.out  SambaSecrets.out  SambaSecrets.pl  SambaService.pl  SambaTrustDom.out  SambaTrustDom.rb  SambaTrustDom.ycp
testsuite/YaPI/tests/: YaPI-AddSAM-2.out  YaPI-AddSAM-2.rb  YaPI-AddSAM-2.ycp  YaPI-AddSAM.out  YaPI-AddSAM.rb  YaPI-AddSAM.ycp  YaPI-AddShare.out  YaPI-AddShare.rb  YaPI-AddShare.ycp  YaPI-DeleteSAM-2.out  YaPI-DeleteSAM-2.rb  YaPI-DeleteSAM-2.ycp  YaPI-DeleteSAM-3.out  YaPI-DeleteSAM-3.rb  YaPI-DeleteSAM-3.ycp  YaPI-DeleteSAM.out  YaPI-DeleteSAM.rb  YaPI-DeleteSAM.ycp  YaPI-DeleteShare-2.out  YaPI-DeleteShare-2.rb  YaPI-DeleteShare-2.ycp  YaPI-DeleteShare.rb  YaPI-DeleteShare.ycp  (+67 more)
testsuite/tests/: DetermineRole1.out  DetermineRole1.ycp  DetermineRole2.out  DetermineRole2.ycp  DetermineRole3.out  DetermineRole3.ycp  ReadLDAPSettings.out  ReadLDAPSettings.ycp  ReloadSettings.out  ReloadSettings.ycp  SambaRole.pl  WriteSAMBackend.out  WriteSAMBackend.ycp  YaPI-AddSAM-2.out  YaPI-AddSAM-2.ycp  YaPI-AddSAM.out  YaPI-AddSAM.ycp  YaPI-AddShare.out  YaPI-AddShare.ycp  YaPI-DeleteSAM-2.out  YaPI-DeleteSAM-2.ycp  YaPI-DeleteSAM-3.out  YaPI-DeleteSAM-3.ycp  YaPI-DeleteSAM.out  YaPI-DeleteSAM.ycp  YaPI-DeleteShare-2.out  YaPI-DeleteShare-2.ycp  YaPI-DeleteShare.out  YaPI-DeleteShare.ycp  YaPI-DetermineRole1.out  YaPI-DetermineRole1.ycp  YaPI-DetermineRole2.out  YaPI-DetermineRole2.ycp  YaPI-DetermineRole3.out  YaPI-DetermineRole3.ycp  YaPI-EditDefaultSAM.out  YaPI-EditDefaultSAM.ycp  YaPI-EditSAMConfiguration.out  YaPI-EditSAMConfiguration.ycp  YaPI-EditServerAsBDC.out  (+77 more)
users-plugin/: Makefile.am  ToDo  UsersPluginSamba.pm  UsersPluginSambaGroups.pm  users_plugin_samba.ycp  users_plugin_samba_groups.ycp
(+27 files in other folders)
